force-app/main/default/objects/communication_log__c/communication_log__c.object-meta.xml
<CustomObject>
    <description>Tracks outbound/inbound communication</description>
    <label>communication log</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>communication log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>communication logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>