force-app/main/default/objects/communication_log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>communication logs</relationshipLabel>
    <relationshipName>communication_logs</relationshipName>
    <type>Lookup</type>
</CustomField>