force-app/main/default/objects/communication_log__c/fields/Interaction_Summary__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interaction Summary</label>
    <referenceTo>InteractionSummary</referenceTo>
    <relationshipLabel>communication logs</relationshipLabel>
    <relationshipName>communication_logs</relationshipName>
    <type>Lookup</type>
</CustomField>