force-app/main/default/objects/communication_log__c/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <externalId>true</externalId>
    <label>Message ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>